Removed extraneous code

--- a/audiolife.html
+++ b/audiolife.html
@@ -58,39 +58,39 @@
 
 
         <figure class="caption">
-            <img src="images/sprout/sketches.jpg">
-            <figcaption>Some of the initial sketches exploring returning users checking on their gardens, a “seed locker” concept to store and manage different seeds you hope to plant, and the augmented reality feature.</figcaption>
+            <img src="images/audiolife/interface.jpg">
+            <figcaption>Some of the screens from the final product after completing the UI.</figcaption>
         </figure>
 
         <p>Since this was a real world project, I got to experience first-hand what it is like to go through the process of designing a complete eco- system rather than a concept. Every single page and detail had to be thought through meticulously, to ensure a seamless experience. Given more time, I would have liked to conduct some user testing, but due to budgeting constraints, this project unfortunately never came into fruition. I chose to include it here as an example of my design work.</p>
 
-        <h4 id="role">My Role</h4>
+        <div id="role_container">
+            <h4 id="role">My Role</h4>
 
-        <p>As the sole designer on this product, it was my job to gather the requirements, develop the wireframes, build a prototype, provide the specifications to our developers and design the interface.</p>
+            <p>As the sole designer on this product, it was my job to gather the requirements, develop the wireframes, build a prototype, provide the specifications to our developers and design the interface.</p>
 
-       <div class="float_center"> 
-            <div class="list">
-                <h4>Methods</h4>
-                    <ul>
-                        <li>Competitive analysis</li>
-                        <li>User journey</li>
-                        <li>Feature brainstorm</li>
-                        <li>Sketching</li>
-                        <li>Wireframing</li>
-                        <li>Prototyping</li>
-                        <li>UI design</li>
-                    </ul>
+        
+                <div class="list">
+                    <h4>Methods</h4>
+                        <ul>
+                            <li>Competitive analysis</li>
+                            <li>User journey</li>
+                            <li>Feature brainstorm</li>
+                            <li>Sketching</li>
+                            <li>Wireframing</li>
+                            <li>Prototyping</li>
+                            <li>UI design</li>
+                        </ul>
+                </div>
+
+                <div class="list">
+                    <h4>Tools</h4>
+                        <ul>
+                            <li>Axure RP</li>
+                            <li>Photoshop</li>
+                        </ul>
+                </div>
             </div>
-
-            <div class="list">
-                <h4>Tools</h4>
-                    <ul>
-                        <li>Axure RP</li>
-                        <li>Photoshop</li>
-                    </ul>
-            </div>
-        </div>
-    
 
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
