--- a/hbogo.html
+++ b/hbogo.html
@@ -41,35 +41,34 @@
 
         <!-- Add your site or application content here -->
 
-        <h1>Sprout: Augmented Reality Mobile App</h1>
+        <h1>HBOGO: UX Strategy & Redesign</h1>
 
-        <h3>What if you could plan and maintain a vegetable garden using your mobile phone?</h3>
+        <h3>What if HBOGO.com was built around a network of your friends allowing you to send and receive recommendations, and see each others reactions to a particular scene?</h3>
 
-        <p>Sprout is a mobile app concept that uses augmented reality to allow users to plan and maintain their vegetable gardens. Our vision for this project was to provide more opportunities for people living in urban environments to start vegetable gardens to fit their own lifestyle and needs.   This vision was a result of primary and secondary research, the former of which I conducted via interviews with existing gardeners I knew. Through this research, we defined our strategy: create a virtual world that can be replicated or mirrored in the real world.</p>
+        <p>The goal of this project was to develop a new UX strategy for HBOGO.com. The UX strategy was based on insights gathered from extensive research on industry trends, a competitive analysis, a heuristic analysis, and user interviews. These insights also informed the development of personas and principles to design against.</p>
 
-        <img src="images/sprout/happy-path.jpg">
-
-        <p>Based on our research and vision, we started off by developing our user “happy path” and personas.  From there, we conducted a feature brainstorm session. This involved filling a large amount of Post-It notes with any possible idea that came to mind, then grouping those ideas into various categories, which we synthesized down to three core features to build the app around.  These features would comprise the MVP, and not only incentivize users, but provide them with the tools to plan and maintain their gardens in a fun and unique way, that’s built around a community. All additional features were saved for our product roadmap.</p>
+        <img src="images/hbogo/persona.jpg">
 
         <figure class="caption">
-            <img src="images/sprout/features.jpg">
-            <figcaption><i>For our MVP, we wanted to focus on the augmented reality feature, which would be the most important, and build in gamification and social sharing features to incentivize users.</i></figcaption>
+            <img src="images/hbogo/persona2.jpg">
+            <figcaption><i>Two personas developed based on initial research and user interviews.</i></figcaption>
         </figure>
+        
+        <p>Each principle was presented with a sketch highlighting some of the new features. CLICK HERE to view the UX strategy presentation slides.</p>
 
-        <p>One of the biggest challenges we encountered was in the initial sketching phase. We’d all set out to sketch our own ideas based on the vision and features, but then had to determine which was the best approach. This took several sessions of deliberation and debate to narrow down all of our ideas. To further narrow our options, we ran some user tests.</p>
+       <img src="images/hbogo/principles1.jpg">
 
-        <figure class="caption">
-            <img src="images/sprout/sketches.jpg">
-            <figcaption>Some of the initial sketches exploring returning users checking on their gardens, a “seed locker” concept to store and manage different seeds you hope to plant, and the augmented reality feature.</figcaption>
-        </figure>
+       <img src="images/hbogo/principles2.jpg">
 
-        <p>For my own user testing, I used an app called Prototyping on Paper. My main concern was the augmented reality feature, because I wanted to make sure this would make sense to users. Fortunately, I found that majority of the participants in the test immediately understood what was happening, without requiring any guidance.</p>
+       <img src="images/hbogo/principles3.jpg">
 
-        <p>After gathering all the feedback from our paper prototypes, we moved onto creating higher fidelity wireframes and, finally, the user interface.</p>
+        <p>The second phase of the project involved developing wireframes based on our strategy and final user experience. These wireframes showed the redesigned homepage, as well as integrated social features to enhance, not only the viewing experience, but the discovery of new content on HBOGO. CLICK HERE to view the wireframe presentation slides.</p>
 
-        <img src="images/sprout/interface.jpg">
+        <img src="images/hbogo/principles1.jpg">
 
-        <p>Since this was my first interactive project, it was extremely invaluable going through the full process from research and ideation, all the way through implementation. Each stage of the process revealed something new to our team that we used to build on and refine our product.  One of the major takeaways was not to fall in love with the first idea, and when all else fails, test.</p>
+       <img src="images/hbogo/principles2.jpg">
+
+       <img src="images/hbogo/principles3.jpg">
 
         <div id="role_container">
             <h4 id="role">My Role</h4>
