Projects & Home Page
Added all of the project pages and begun work on the home page content.

--- a/audiolife.html
+++ b/audiolife.html
@@ -47,19 +47,19 @@
 
         <p>Audiolife is a music distribution and tech startup I worked at after college for several years. We were eventually acquired by Alliance Entertainment, but still able to continue functioning like a startup. With one of the largest distributors of media products to support us, we knew we wanted to build on Alliance’s network of retailers to provide something unique to indie artists that we didn’t currently offer.</p>
 
-        <img src="images/audiolife/user-journey.jpg">
+        <img class="border" src="images/audiolife/user-journey.jpg">
 
         <p>The product I designed is a web application that allows independent musicians to use our tools to upload their music and create designs for their CDs and merch. They could then have their products distributed for sale to major online retailers, as well as indie record stores, for a monthly fee.</p>
 
         <figure class="caption">
-            <img src="images/audiolife/wireframes.jpg">
+            <img class="border" src="images/audiolife/wireframes.jpg">
             <figcaption><i>Some of the hi-fidelity wireframes from the prototype I built in Axure RP after getting feedback on my initial sketches.</i></figcaption>
         </figure>
 
 
         <figure class="caption">
             <img src="images/audiolife/interface.jpg">
-            <figcaption>Some of the screens from the final product after completing the UI.</figcaption>
+            <figcaption><i>Some of the screens from the final product after completing the UI.</i></figcaption>
         </figure>
 
         <p>Since this was a real world project, I got to experience first-hand what it is like to go through the process of designing a complete eco- system rather than a concept. Every single page and detail had to be thought through meticulously, to ensure a seamless experience. Given more time, I would have liked to conduct some user testing, but due to budgeting constraints, this project unfortunately never came into fruition. I chose to include it here as an example of my design work.</p>
