--- a/echo.html
+++ b/echo.html
@@ -55,34 +55,34 @@
         <p>I started the redesign by performing a thorough content audit of the site as well as a competitive analysis of similar websites in the area to pinpoint commonalities and differences. After a couple of user interviews and some research on concert attendee demographics, I was able to develop personas for the redesign. Using these personas, I developed user critical tasks, user scenarios, and use cases to help inform all subsequent decisions.</p>
 
         <figure class="caption">
-            <img src="images/echo/personas.jpg">
+            <img class="border" src="images/echo/personas.jpg">
             <figcaption><i>2 out of 3 of the personas developed for this project.</i></figcaption>
         </figure>
 
 
         <figure class="caption">
-            <img src="images/echo/critical-tasks.jpg">
-            <figcaption>Once the personas were developed, I came up with the critical tasks for each, along with user scenarios.</figcaption>
+            <img class="border" src="images/echo/critical-tasks.jpg">
+            <figcaption><i>Once the personas were developed, I came up with the critical tasks for each, along with user scenarios.</i></figcaption>
         </figure>
 
         <figure class="caption">
-            <img src="images/echo/use-case.jpg">
-            <figcaption>Additionally, I developed use cases for each persona based on the critical tasks outlined above.</figcaption>
+            <img class="border" src="images/echo/use-case.jpg">
+            <figcaption><i>Additionally, I developed use cases for each persona based on the critical tasks outlined above.</i></figcaption>
         </figure>
 
         <p>After conducting a card sorting exercise, I was able to create the navigation and overall architecture of the new website.</p>
 
-        <img src="images/echo/site-map.jpg">
+        <img class="border" src="images/echo/site-map.jpg">
 
         <p>From there, I dove into sketching the wireframes. By starting with sketching, I was able to quickly explore different layouts, keeping my personas’ goals in mind. For each layout, I went through and made notes in red of the various entry points for each persona.</p>
 
         <p>After some initial feedback, I was able to develop higher fidelity wireframes, which I turned into a prototype for user testing with members of the target demographic for the venue. The user test asked participants to complete a series of tasks and be able to identify the purpose of the site. Based on the results of the user tests, I was confident that the redesign presented the information in a more organized manner and was a more positive experience overall for visitors to the site.</p>
 
-        <img src="images/echo/homepage.jpg">
+        <img class="border" src="images/echo/homepage.jpg">
 
-        <img src="images/echo/calendar.jpg">
+        <img class="border" src="images/echo/calendar.jpg">
 
-        <img src="images/echo/blog.jpg">
+        <img class="border" src="images/echo/blog.jpg">
 
         <div id="role_container">
             <h4 id="role">My Role</h4>
