--- a/hbogo.html
+++ b/hbogo.html
@@ -47,53 +47,58 @@
 
         <p>The goal of this project was to develop a new UX strategy for HBOGO.com. The UX strategy was based on insights gathered from extensive research on industry trends, a competitive analysis, a heuristic analysis, and user interviews. These insights also informed the development of personas and principles to design against.</p>
 
-        <img src="images/hbogo/persona.jpg">
+        <img class="border" src="images/hbogo/persona.jpg">
 
         <figure class="caption">
-            <img src="images/hbogo/persona2.jpg">
+            <img class="border" src="images/hbogo/persona2.jpg">
             <figcaption><i>Two personas developed based on initial research and user interviews.</i></figcaption>
         </figure>
         
         <p>Each principle was presented with a sketch highlighting some of the new features. CLICK HERE to view the UX strategy presentation slides.</p>
 
-       <img src="images/hbogo/principles1.jpg">
+        
+       <img class="border" src="images/hbogo/principles1.jpg">
 
-       <img src="images/hbogo/principles2.jpg">
+       <img class="border" src="images/hbogo/principles2.jpg">
 
-       <img src="images/hbogo/principles3.jpg">
+       <img class="border" src="images/hbogo/principles3.jpg">
 
-        <p>The second phase of the project involved developing wireframes based on our strategy and final user experience. These wireframes showed the redesigned homepage, as well as integrated social features to enhance, not only the viewing experience, but the discovery of new content on HBOGO. CLICK HERE to view the wireframe presentation slides.</p>
 
-        <img src="images/hbogo/principles1.jpg">
+        <p>The second phase of the project involved developing wireframes based on our strategy and final user experience. These wireframes showed the redesigned homepage, as well as integrated social features to enhance, not only the viewing experience, but the discovery of new content on HBOGO.</p>
 
-       <img src="images/hbogo/principles2.jpg">
+        <p><a href="https://www.dropbox.com/s/ald67dgn606xp3v/anaK-hbogo-wireframe-presentation.pdf?dl=0">CLICK HERE</a> to view the wireframe presentation slides.</p>
 
-       <img src="images/hbogo/principles3.jpg">
+       <img src="images/hbogo/wireframe1.jpg">
+
+       <img src="images/hbogo/wireframe2.jpg">
+
+       <img src="images/hbogo/wireframe3.jpg">
+
+       <img src="images/hbogo/wireframe4.jpg">
 
         <div id="role_container">
             <h4 id="role">My Role</h4>
 
-            <p>This project was completed by myself and five others; however, we all participated in each phase of the process except for the hi-fidelity wireframes and UI, which was done by one person. The work you see here is mine alone, except for the final phase (UI).</p>
-
+            <p>All of the work shown here was completed by myself for User Experience II at UCLAx. The course was conducted similar to what one might do in an agency, which is why the presentation slides in the links often say “we” rather than “I.”</p>
 
             <div class="list">
                 <h4>Methods</h4>
                     <ul>
-                        <li>Primary research</li>
                         <li>Secondary research</li>
-                        <li>User journey</li>
-                        <li>Feature brainstorm</li>
-                        <li>Personas</li>
+                        <li>Heuristic analysis</li>
+                        <li>User interviews</li>
+                        <li>Competitive analysis</li>
+                        <li>Sketching</li>
                         <li>Wireframing</li>
-                        <li>Prototyping</li>
-                        <li>User testing</li>
                     </ul>
             </div>
 
             <div class="list">
                 <h4>Tools</h4>
                     <ul>
-                        <li>Prototyping On Paper</li>
+                        <li>Illustrator</li>
+                        <li>InDesign</li>
+                        <li>Keynote</li>
                     </ul>
             </div>
         </div>
