--- a/sprout.html
+++ b/sprout.html
@@ -47,19 +47,19 @@
 
         <p>Sprout is a mobile app concept that uses augmented reality to allow users to plan and maintain their vegetable gardens. Our vision for this project was to provide more opportunities for people living in urban environments to start vegetable gardens to fit their own lifestyle and needs.   This vision was a result of primary and secondary research, the former of which I conducted via interviews with existing gardeners I knew. Through this research, we defined our strategy: create a virtual world that can be replicated or mirrored in the real world.</p>
 
-        <img src="images/sprout/happy-path.jpg">
+        <img class="border" src="images/sprout/happy-path.jpg">
 
         <p>Based on our research and vision, we started off by developing our user “happy path” and personas.  From there, we conducted a feature brainstorm session. This involved filling a large amount of Post-It notes with any possible idea that came to mind, then grouping those ideas into various categories, which we synthesized down to three core features to build the app around.  These features would comprise the MVP, and not only incentivize users, but provide them with the tools to plan and maintain their gardens in a fun and unique way, that’s built around a community. All additional features were saved for our product roadmap.</p>
 
         <figure class="caption">
-            <img src="images/sprout/features.jpg">
+            <img class="border" src="images/sprout/features.jpg">
             <figcaption><i>For our MVP, we wanted to focus on the augmented reality feature, which would be the most important, and build in gamification and social sharing features to incentivize users.</i></figcaption>
         </figure>
 
         <p>One of the biggest challenges we encountered was in the initial sketching phase. We’d all set out to sketch our own ideas based on the vision and features, but then had to determine which was the best approach. This took several sessions of deliberation and debate to narrow down all of our ideas. To further narrow our options, we ran some user tests.</p>
 
         <figure class="caption">
-            <img src="images/sprout/sketches.jpg">
+            <img class="border" src="images/sprout/sketches.jpg">
             <figcaption>Some of the initial sketches exploring returning users checking on their gardens, a “seed locker” concept to store and manage different seeds you hope to plant, and the augmented reality feature.</figcaption>
         </figure>
 
