--- a/waze.html
+++ b/waze.html
@@ -14,7 +14,7 @@
         <link href='http://fonts.googleapis.com/css?family=Glegoo' rel='stylesheet' type='text/css'>
 
     
-        <title>Ana Khachatrian's UX Portfolio</title>
+        <title>Waze: Interactive Branding Experience</title>
         <meta name="description" content="A portfolio for Ana Khachatrian, a user experience designer based in Los Angeles.">
 
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -41,50 +41,47 @@
 
         <!-- Add your site or application content here -->
 
-        <h1>Rock-Paper-Scissors: Arduino Project</h1>
+        <h1>Waze: Interactive Branding Experience</h1>
 
-        <h3>What if you could play Rock-Paper-Scissors against a machine?</h3>
+        <h3>What if Waze could help create driverless cities?</h3>
 
-        <iframe src="https://player.vimeo.com/video/98460110?color=ff9933&portrait=0" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+        <p>The objective of this project was to create a holistic well-being brand experience. The brand I chose to work with is Waze because I felt it's a powerful app with untapped potential that I wanted to explore. The first phase of the project involved research and discovery. I looked at various social, economic, technological, political and industry trends as well as conducted a SWOT analysis for Waze and three competitors. All of this research helped to inform some initial opportunities for further exploration. From there, I came up with a couple of potential consumer archetypes. This initial phase spanned a few weeks and included multiple brainstorming sessions. </p>
 
-        <p>For my first project with the Arduino, I wanted to explore usability as well as form, so I decided to work on a game. It had to be something that someone would instinctively know how to play once they approached it, without any sort of direction. This is what led me to recreate the classic childhood game, Rock-Paper-Scissors, using LEDs, a slide potentiometer and a piezo.</p>
+        <p>Throughout the initial discovery phase, I was fascinated by this idea of "driverless cities." I knew that, based on my research, cities were becoming more and more dense, we would be seeing an increase in connected devices, and Millennials were less interested in the possession of cars than previous generations. Based on this, and some other findings, I began to sketch and explore several concepts that would build on the incredible capabilities that Waze (owned by Google) has and could have in the not too distant future.</p>
 
-        <img src="images/rps/game.jpg">
+        <figure class="caption">
+            <img class="border" src="images/waze/sketches.jpg">
+            <figcaption><i>Some of the initial concepts I explored in my sketches.</i></figcaption>
+        </figure>
+        
+        <p>Ultimately, the most compelling and interesting concepts for me, centered around the idea of "driverless cities." Since the goal of the project was to focus on the well-being of users, I felt that this direction made the most sense since commuting and traffic are often some of the more frustrating aspects of our day to day lives, not to mention the health/environmental benefits of alternate modes of transportation. With this idea as my inspiration, I sketched out a user scenario that helped to inform my final concept and designs which can be viewed in the video below.</p>
 
-        <p>Since I was still new to programming at this time, I found that the best way to approach the project is to break down each of the individual components and work on getting those to function separately; however, that only got me so far. It turns out that bringing everything together is a bit more complicated than simply piecing the individual programs together. I had a major breakthrough once I discovered that I can create multiple states in the program. For my purposes, I only needed two, one that would run during the actual gameplay and another that would determine the results and let you know if you won, lost or tied.</p>
-
-        <p>In the spirit of open-source, I’ve made my program <a href="https://github.com/anakhachatrian/Rock-Paper-Scissors-with-Arduino">available on GitHub</a> and included a Fritzing diagram below for anyone interested in creating their own.</p>
-
-         <img src="images/rps/fritzing.jpg">
-
+        <iframe src="https://player.vimeo.com/video/121314321?color=ff9933&portrait=0" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 
         <div id="role_container">
             <h4 id="role">My Role</h4>
 
-            <p>I wired, programmed and built the game from scratch with some help from the Arduino community and Pete Hawkes.</p>
-
+            <p>All of the work shown here was completed by myself.</p>
 
             <div class="list">
                 <h4>Methods</h4>
                     <ul>
+                        <li>STEEPx research</li>
+                        <li>SWOT analysis</li>
+                        <li>Archetypes</li>
                         <li>Sketching</li>
-                        <li>Programming</li>
-                        <li>Breadboarding</li>
-                        <li>User testing</li>
+                        <li>User journey</li>
+                        <li>Wireframing</li>
+                        <li>UI Design</li>
                     </ul>
             </div>
 
             <div class="list">
                 <h4>Tools</h4>
                     <ul>
-                        <li>Arduino UNO</li>
-                        <li>Fritzing</li>
-                        <li>Breadboard</li>
-                        <li>Wires</li>
-                        <li>LEDs</li>
-                        <li>Piezo</li>
-                        <li>Potentiometer</li>
-                        <li>GitHub</li>
+                        <li>Illustrator</li>
+                        <li>Photoshop</li>
+                        <li>Keynote</li>
                     </ul>
             </div>
         </div>
