--- a/rock-paper-scissors.html
+++ b/rock-paper-scissors.html
@@ -41,53 +41,56 @@
 
         <!-- Add your site or application content here -->
 
-        <h1>Rock-Paper-Scissors: Arduino Project</h1>
+        <div class="page">
 
-        <h3>What if you could play Rock-Paper-Scissors against a machine?</h3>
+            <h1>Rock-Paper-Scissors: Arduino Project</h1>
 
-        <iframe src="https://player.vimeo.com/video/98460110?color=ff9933&portrait=0" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+            <h3>What if you could play Rock-Paper-Scissors against a machine?</h3>
 
-        <p>For my first project with the Arduino, I wanted to explore usability as well as form, so I decided to work on a game. It had to be something that someone would instinctively know how to play once they approached it, without any sort of direction. This is what led me to recreate the classic childhood game, Rock-Paper-Scissors, using LEDs, a slide potentiometer and a piezo.</p>
+            <iframe src="https://player.vimeo.com/video/98460110?color=ff9933&portrait=0" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 
-        <img src="images/rps/game.jpg">
+            <p>For my first project with the Arduino, I wanted to explore usability as well as form, so I decided to work on a game. It had to be something that someone would instinctively know how to play once they approached it, without any sort of direction. This is what led me to recreate the classic childhood game, Rock-Paper-Scissors, using LEDs, a slide potentiometer and a piezo.</p>
 
-        <p>Since I was still new to programming at this time, I found that the best way to approach the project is to break down each of the individual components and work on getting those to function separately; however, that only got me so far. It turns out that bringing everything together is a bit more complicated than simply piecing the individual programs together. I had a major breakthrough once I discovered that I can create multiple states in the program. For my purposes, I only needed two, one that would run during the actual gameplay and another that would determine the results and let you know if you won, lost or tied.</p>
+            <img src="images/rps/game.jpg">
 
-        <p>In the spirit of open-source, I’ve made my program <a href="https://github.com/anakhachatrian/Rock-Paper-Scissors-with-Arduino">available on GitHub</a> and included a Fritzing diagram below for anyone interested in creating their own.</p>
+            <p>Since I was still new to programming at this time, I found that the best way to approach the project is to break down each of the individual components and work on getting those to function separately; however, that only got me so far. It turns out that bringing everything together is a bit more complicated than simply piecing the individual programs together. I had a major breakthrough once I discovered that I can create multiple states in the program. For my purposes, I only needed two, one that would run during the actual gameplay and another that would determine the results and let you know if you won, lost or tied.</p>
 
-         <img src="images/rps/fritzing.jpg">
+            <p>In the spirit of open-source, I’ve made my program <a href="https://github.com/anakhachatrian/Rock-Paper-Scissors-with-Arduino">available on GitHub</a> and included a Fritzing diagram below for anyone interested in creating their own.</p>
 
-
-        <div id="role_container">
-            <h4 id="role">My Role</h4>
-
-            <p>I wired, programmed and built the game from scratch with some help from the Arduino community and Pete Hawkes.</p>
+             <img src="images/rps/fritzing.jpg">
 
 
-            <div class="list">
-                <h4>Methods</h4>
-                    <ul>
-                        <li>Sketching</li>
-                        <li>Programming</li>
-                        <li>Breadboarding</li>
-                        <li>User testing</li>
-                    </ul>
+            <div id="role_container">
+                <h4 id="role">My Role</h4>
+
+                <p>I wired, programmed and built the game from scratch with some help from the Arduino community and Pete Hawkes.</p>
+
+
+                <div class="list">
+                    <h4>Methods</h4>
+                        <ul>
+                            <li>Sketching</li>
+                            <li>Programming</li>
+                            <li>Breadboarding</li>
+                            <li>User testing</li>
+                        </ul>
+                </div>
+
+                <div class="list">
+                    <h4>Tools</h4>
+                        <ul>
+                            <li>Arduino UNO</li>
+                            <li>Fritzing</li>
+                            <li>Breadboard</li>
+                            <li>Wires</li>
+                            <li>LEDs</li>
+                            <li>Piezo</li>
+                            <li>Potentiometer</li>
+                            <li>GitHub</li>
+                        </ul>
+                </div>
             </div>
-
-            <div class="list">
-                <h4>Tools</h4>
-                    <ul>
-                        <li>Arduino UNO</li>
-                        <li>Fritzing</li>
-                        <li>Breadboard</li>
-                        <li>Wires</li>
-                        <li>LEDs</li>
-                        <li>Piezo</li>
-                        <li>Potentiometer</li>
-                        <li>GitHub</li>
-                    </ul>
-            </div>
-        </div>
+         </div>   
 
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
