--- a/sprout.html
+++ b/sprout.html
@@ -34,6 +34,7 @@
 
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
     </head>
+    
     <body>
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
@@ -47,7 +48,7 @@
 
         <p>Sprout is a mobile app concept that uses augmented reality to allow users to plan and maintain their vegetable gardens. Our vision for this project was to provide more opportunities for people living in urban environments to start vegetable gardens to fit their own lifestyle and needs.   This vision was a result of primary and secondary research, the former of which I conducted via interviews with existing gardeners I knew. Through this research, we defined our strategy: create a virtual world that can be replicated or mirrored in the real world.</p>
 
-        <img class="border" src="images/sprout/happy-path.jpg">
+        <img class="border" src="images/sprout/happy-path.jpg" alt="">
 
         <p>Based on our research and vision, we started off by developing our user “happy path” and personas.  From there, we conducted a feature brainstorm session. This involved filling a large amount of Post-It notes with any possible idea that came to mind, then grouping those ideas into various categories, which we synthesized down to three core features to build the app around.  These features would comprise the MVP, and not only incentivize users, but provide them with the tools to plan and maintain their gardens in a fun and unique way, that’s built around a community. All additional features were saved for our product roadmap.</p>
 
